# python-template

./: .env.local  .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt
.roo/: mcp.json
